# strato-certbot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
docker/: Dockerfile
strato_certbot/: auth_hook.py  certbotstratoapi.py  cleanup_hook.py
test/: get_package_id_test.py  records_test.py
